# apzkr-pzpi-21-3-tanasiichuk-vladyslav

./: README.md  apzkr-pzpi-21-3-tanasiichuk-vladyslav.txt
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task1-Server/: compose.yml  package-lock.json  package.json
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task1-Server/prisma/: seed.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task1-Server/src/: app.module.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task1-Server/src/admin/: admin.controller.ts  admin.service.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task1-Server/src/auth/: auth.service.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task1-Server/src/devices/: devices.service.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task2-IoT/: Cargo.toml  device_data.json  settings.json
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task2-IoT/src/: device_data.rs  lib.rs  main.rs  settings.rs
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task3-WebClient/: package-lock.json  package.json
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task3-WebClient/public/locales/: en.json  ua.json
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task3-WebClient/src/: i18nConfig.ts  middleware.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task3-WebClient/src/app/: i18n.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task3-WebClient/src/components/: index.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task3-WebClient/src/services/: get-analitycs.ts  get-animal-metrics.ts  get-animal-species-by-id.ts  get-animal-species.ts  get-animal.ts  get-notifications.ts  get-user.ts
apzkr-pzpi-21-3-tanasiichuk-vladyslav/Task3-WebClient/src/types/: index.ts
(+65 files in other folders)
