[package]
name = "Task3"
version = "0.1.0"
edition = "2021"

[lib]
name = "task_3_lib"
version = "0.1.0"
src = ["lib.rs"]

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
